--- a/views/voxbone_widget_div.jade
+++ b/views/voxbone_widget_div.jade
@@ -5,6 +5,7 @@
  data-incompatible_browser_configuration="#{the_widget.incompatible_browser_configuration || ''}"
  data-show_frame="true"
  data-server_url="#{process.env.APP_URL}"
- data-default_button_css="true"
+ data-use_default_button_css="true"
+ data-button_css_class_name="#{the_widget.button_style}"
 )
   script(src="#{script}")
