[vxb-bug-38] When new user verify the account a undefined value shows up on email field (#192)

--- a/views/login.jade
+++ b/views/login.jade
@@ -36,7 +36,7 @@ block content
 
             #form_container
               .formWrap
-                form#login_form(ng-controller="LoginController" ng-init="login.uemail='#{email}'" name="login_form" novalidate)
+                form#login_form(ng-controller="LoginController" ng-init="login.uemail='#{email || ''}'" name="login_form" novalidate)
                   .form-group
                     label.control-label Email
                     input.form-control(type="email" id="uemail" name="uemail" ng-model="login.uemail" required)
