--- a/views/forgot.jade
+++ b/views/forgot.jade
@@ -6,24 +6,10 @@ block content
       var forgotApp = angular.module('voxboneApp', []);
 
       forgotApp.controller('ForgotController', ['$scope', '$http', '$window', function($scope, $http, $window){
-        $scope.master = {};
 
-        $scope.update = function(forgot){
-          $scope.master = angular.copy(forgot);
-        };
+        $scope.processForm = function () {
+          $scope.submitting = true;
 
-        $scope.reset = function(form){
-          if(form){
-            form.$setPristine();
-            form.$setUntouched();
-          }
-          $scope.forgot = angular.copy($scope.master);
-        };
-
-        $scope.reset();
-
-        $scope.forgot.processForm = function(){
-          console.log("--> Submitting...");
           var req = {
             method: 'POST',
             url: '/forgot',
@@ -35,16 +21,20 @@ block content
             }
           };
           $http(req)
-            .then(function successCallback(response){
-              document.getElementById("successmsg").innerHTML = "An email has been sent with a link to reset your password. Please check your inbox for an email from no-reply@voxbone.com.";
-              document.getElementById("successmsg").style.display = "block";
-              document.getElementById("errormsg").style.display = "none";
-              document.getElementById("tokenError").style.display = "none";
-            }, function errorCallback(response){
-              document.getElementById("errormsg").innerHTML = "No account found associated to that email address.";
-              document.getElementById("errormsg").style.display = "block";
-              document.getElementById("sucessmsg").style.display = "none";
-              document.getElementById("tokenError").style.display = "none";
+            .then(function successCallback(response) {
+              $('#successmsg')
+                .html("An email has been sent with a link to reset your password. Please check your inbox for an email from no-reply@voxbone.com.")
+                .css('display', 'block');
+
+              $('#errormsg, #tokenError').hide();
+              $scope.submitting = false;
+            }, function errorCallback(response) {
+              $("#errormsg")
+                .html("No account found associated to that email address.")
+                .css('display', 'block');
+
+              $('#successmsg, #tokenError').hide();
+              $scope.submitting = false;
             });
         }
       }]);
@@ -68,15 +58,15 @@ block content
 
             #form_container
               .formWrap
-                form#forgot_form(ng-controller="ForgotController" name="forgot_form" novalidate)
+                form#forgot_form(ng-controller="ForgotController" ng-init="forgot.uemail='#{email || ''}'" name="forgot_form" novalidate)
                   .form-group
                     label.control-label Email
-                    input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail" value="#{email}" required)
+                    input.form-control(type="email" id="uemail" name="uemail" ng-model="forgot.uemail" required)
                     .error-label(ng-cloak ng-show="forgot_form.$submitted || forgot_form.uemail.$touched")
                       div(ng-show="forgot_form.uemail.$error.required") Email is required
                     .error-label(ng-cloak ng-show="forgot_form.uemail.$dirty && forgot_form.uemail.$invalid")
                       div(ng-show="forgot_form.uemail.$error.email") Email is invalid
 
-                  button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid" ng-click="forgot.processForm()") Reset Password
+                  button.btn.btn-default#forgot(ng-disabled="forgot_form.$invalid || submitting" ng-click="processForm()") Reset Password
                   br
                   a(href="/")
