--- a/public/stylesheets/less/vxb-button.less
+++ b/public/stylesheets/less/vxb-button.less
@@ -14,14 +14,14 @@
 @width0: 140px; // Appears 4 times
 @width1: 100%; // Appears 5 times
 
-.widget-box a {
+.vxb-widget-box a {
   font-family: 'Open Sans', sans-serif;
   text-decoration:none;
   color:#343c3e;
   font-weight:400;
 }
 
-.btn-style-a span,.btn-style-b span,.widget-box.style-a .btn-style span,.widget-box.style-b .btn-style span {
+.btn-style-a span,.btn-style-b span,.vxb-widget-box.style-a .vxb-btn-style span,.vxb-widget-box.style-b .vxb-btn-style span {
   text-shadow:0 -1px #07619e;
   font-family: 'Open Sans', sans-serif;
   font-weight: bold;
@@ -128,7 +128,7 @@
     background:linear-gradient(@color3,@color1);
   }
 }
-.widget-box {
+.vxb-widget-box {
   max-width: 200px;
   max-height: 200px;
   -moz-border-radius:6px;
@@ -159,19 +159,19 @@
       padding-right:62px;
     }
   }
-  .btn-style {
+  .vxb-btn-style {
     display:inline-block;
     padding-left:10px;
     padding-right:10px;
     text-align:center;
   }
 }
-.widget-box.style-a {
+.vxb-widget-box.style-a {
   -moz-box-shadow:inset 0 0 5px 0 @color4,0 0 8px 0 rgba(0,0,0,.2);
   -webkit-box-shadow:inset 0 0 5px 0 @color4,0 0 8px 0 rgba(0,0,0,.2);
   background:#f5f5f7;
   box-shadow:inset 0 0 5px 0 @color4,0 0 8px 0 rgba(0,0,0,.2);
-  .btn-style {
+  .vxb-btn-style {
     -moz-border-radius:4px;
     -moz-box-shadow:0 1px 1px rgba(0,0,0,.16);
     -ms-box-shadow:0 1px 1px rgba(0,0,0,.16);
@@ -223,12 +223,12 @@
     }
   }
 }
-.widget-box.style-b {
+.vxb-widget-box.style-b {
   -moz-box-shadow:inset 0 0 5px 0 rgba(255,255,255,.5),0 0 8px 0 rgba(0,0,0,.2);
   -webkit-box-shadow:inset 0 0 5px 0 rgba(255,255,255,.5),0 0 8px 0 rgba(0,0,0,.2);
   background:#2a2929;
   box-shadow:inset 0 0 5px 0 rgba(255,255,255,.5),0 0 8px 0 rgba(0,0,0,.2);
-  .btn-style {
+  .vxb-btn-style {
     -moz-border-radius:4px;
     -moz-box-shadow:0 1px 1px rgba(0,0,0,.16);
     -ms-box-shadow:0 1px 1px rgba(0,0,0,.16);
