--- a/views/account/call-button.html
+++ b/views/account/call-button.html
@@ -1,6 +1,6 @@
-<div class="voxButton" id="voxButton_573a8abc66a0301f00ce6fe3">
-  <link rel="stylesheet" href="https://click2vox.com/stylesheets/widget.css?v=110">
-  <script src="https://click2vox.com/javascripts/widget.js?v=110"></script>
-  <iframe id="call_button_frame" width="300" height="130" frameBorder="0" scrolling="no" src="https://click2vox.com/voxbone_widget/573a8abc66a0301f00ce6fe3"></iframe>
-  <div id="control"></div>
+<div id="voxButton_5670b7d2fecebc1100ab2ce6" data-button_id="5670b7d2fecebc1100ab2ce6" data-text="Click to Call Voxbone" data-redirect_url="https://voxbone.com" data-did="883510080405" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-server_url="https://click2vox-com-staging.herokuapp.com" data-use_default_button_css="false"
+data-div_css_class_name=""
+data-button_css_class_name="btn btn-purple"
+class="voxButton">
 </div>
+<script src="https://click2vox-com-staging.herokuapp.com/click2vox.js"></script>
