[#202] Demo page links to jsfiddle & codepen should look inactive (#205)

--- a/views/widget/demo.jade
+++ b/views/widget/demo.jade
@@ -149,7 +149,7 @@ block content
                     span Widget Code Snippet
                       p The following HTML code it is just for demo purposes.
 
-                      .btn-code-playground
+                      .btn-code-playground(style="display: inline-block;" qtip="Create an account to export your widget code or quickly test with free web testing services like JSFiddle or CodePen" qtip-my="center left" qtip-at="center right")
                         .btn-jsfiddle
                           a.inactive(href="javascript:;") JSFiddle
                         .btn-jsfiddle
