--- a/public/stylesheets/less/landingPage.less
+++ b/public/stylesheets/less/landingPage.less
@@ -4,35 +4,35 @@
   background-image: url('../../images/kid-with-plane.jpg');
   background-size: cover;
   background-position: center top;
-  
+
   .navbar.navbar,
   .navbar-default.navbar {
     border-bottom-color: rgba(255, 255, 255, 0.65);
-    
-    a.login, 
+
+    a.login,
     a.login {
       color: #fff;
       border-color: #fff;
     }
   }
-  
+
   .call-to-action {
     margin: 240px auto 0;
     text-align: center;
-    
+
     span {
       font-size: 22px;
       display: inline-block;
       color: #fff;
       font-weight: 300;
       margin-bottom: 10px;
-      
+
       em {
-        border-bottom: 1px solid #fff;    
+        border-bottom: 1px solid #fff;
         font-weight: 300;
       }
     }
-    
+
     .block {
       text-transform: uppercase;
       border-top: 1px solid #fff;
@@ -54,35 +54,35 @@
 
 
 .landing-main {
-  
+
   padding: 60px 0;
   p {
     font-size: 15px;
   }
-  
+
   a {
     text-decoration: underline;
   }
-  
+
   &.white {
     background: @main-bg-light;
   }
-  
+
 }
 
 .landing-footer {
   text-align: center;
-  background: @vx-purple;  
+  background: @vx-purple;
   padding: 80px 0;
-  
-  span {
+
+  .title {
     color: #fff;
     font-weight: 300;
     font-size: 22px;
     margin-bottom: 35px;
-    display: inline-block;  
+    display: inline-block;
   }
-  
+
   .btn {
     min-width: 280px;
     margin: 0 5px;
@@ -91,7 +91,7 @@
     background-color: transparent;
     text-transform: uppercase;
     font-weight: 300;
-    
+
     &:hover {
       background: rgba(255, 255, 255, 0.25);
     }
@@ -102,19 +102,19 @@
   text-align: center;
   padding: 0 20px;
   margin-top: 30px;
-  
+
   img {
     width: 100%;
     max-width: 300px;
   }
-  
+
   span{
     margin-top: 10px;
     display: inline-block;
     font-size: 18px;
     font-weight: 300;
   }
-  
+
 }
 
 .screen-shot-holder-large{
@@ -122,7 +122,7 @@
   padding: 0 20px;
   margin-top: 30px;
   margin-bottom: 30px;
-  
+
   img {
     width: 100%;
     max-width: 500px;
