--- a/views/landing.html
+++ b/views/landing.html
@@ -96,9 +96,17 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-xs-offset-1">
-            <span>Want to try it now?</span><br>
-            <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
-            <a href="#" class="btn btn btn-purple">click2vox Us</a>
+            <span class="title">Want to try it now?</span><br>
+            <div>
+              <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
+            </div>
+            <hr>
+            <div id="voxButton_5670b7d2fecebc1100ab2ce6" data-button_id="5670b7d2fecebc1100ab2ce6" data-text="click2vox Us" data-redirect_url="https://voxbone.com" data-did="883510080144" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-server_url="https://click2vox-com-staging.herokuapp.com" data-use_default_button_css="false"
+            data-div_css_class_name=""
+            data-button_css_class_name="btn btn-purple"
+            class="voxButton">
+            </div>
+            <script src="https://click2vox-com-staging.herokuapp.com/click2vox.js"></script>
           </div>
         </div>
       </div>
