--- a/views/account/widget-list.jade
+++ b/views/account/widget-list.jade
@@ -65,23 +65,4 @@ block content
                         td.text-right
                           #[button.btn.btn-sm.btn-primary.clipboard(widget-code="#{widget.divCode}") Copy Code] #[a.btn.btn-sm.btn-info(href="/widget/#{widget._id}/edit") View / Edit]
 
-  //- Note: We cannot include this inside the modal
-  //- So, we add it in the outside and redirect the click
-  .call-to-voxbone-button
-    include call-button.html
-
-  .modal.fade.add-new-modal#myModal(tabindex="-1" role="dialog" aria-labelledby="myModalLabel" ng-controller="ListWidgetController")
-    .modal-dialog(role="document")
-      .modal-content
-        .modal-header
-          button.close(type="button" class="" data-dismiss="modal" aria-label="Close")
-            span(aria-hidden="true")&times;
-          h4.modal-title#myModalLabel
-            i.glyphicon.glyphicon-exclamation-sign
-            span  Add New SIP URI
-        .modal-body
-          p#[strong Coming Soon.] To add a new SIP URI you will need to upgrade to a paid account. We are currently working on these feature. Please contact us directly if you need this sooner.
-        .modal-footer
-          button.btn.btn-purple(type="button" ng-click="callVoxbone()") Click to Call Voxbone
-          a(href="mailto:info@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Upgrading")
-            button.btn.btn-success(type="button") Click to Email Voxbone
+  include contact-voxbone
