--- a/views/landing.html
+++ b/views/landing.html
@@ -101,7 +101,7 @@
               <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
             </div>
             <hr>
-            <div id="voxButton_5670b7d2fecebc1100ab2ce6" data-button_id="5670b7d2fecebc1100ab2ce6" data-text="click2vox Us" data-redirect_url="https://voxbone.com" data-did="883510080144" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-server_url="https://click2vox-com-staging.herokuapp.com" data-use_default_button_css="false"
+            <div id="voxButton_575b3d7e89005411004db935" data-button_id="575b3d7e89005411004db935" data-text="click2vox Us" data-redirect_url="https://voxbone.com" data-did="883510080408" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-use_default_button_css="false"
             data-div_css_class_name=""
             data-button_css_class_name="btn btn-purple"
             class="voxButton">
