--- a/views/account/coming-soon-modal.jade
+++ b/views/account/coming-soon-modal.jade
@@ -6,10 +6,10 @@
           span(aria-hidden="true")&times;
         h4.modal-title#myModalLabel
           i.glyphicon.glyphicon-exclamation-sign
-          span  Add New SIP URI
+          span  Add an Additional SIP URI
       .modal-body
-        p#[strong Coming Soon.] To add a new SIP URI you will need to upgrade to a paid account. We are currently working on these feature. Please contact us directly if you need this sooner.
+        p#[strong Coming Soon.] To add an additional SIP URI you will need to upgrade to a paid account. Please contact us using one of the buttons below for more information.
       .modal-footer
-        button.btn.btn-purple(type="button" id="callVoxbone") Click to Call Voxbone
-        a(href="mailto:info@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Upgrading")
-          button.btn.btn-success(type="button") Click to Email Voxbone
+        button.btn.btn-purple(type="button" id="callVoxbone") Click to Call Us
+        a(href="mailto:workshop@voxbone.com?subject=%5BCLICK2VOX%5D%20About%20Upgrading")
+          button.btn.btn-success(type="button") Click to Email Us
