--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,7 +54,7 @@ html(lang='en')
       nav.navbar
         .navbar-header
           a.navbar-brand(href='https://voxbone.com' target="_blank")
-          span.subBrand Voxbone WebRTC Beta
+          span.subBrand Click2Vox Click-to-Call Gateway
         .pull-right
           if authenticated
             a.login.pull-left.user-pill(href="/") Home
@@ -75,4 +75,5 @@ html(lang='en')
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
           a(target="_blank" href="https://docs.google.com/document/d/1rj5O9hJnjlUAe64HeeNo-ZktNRFefseEc8QAF0-z44Y/edit?usp=sharing") Known Issues
           a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send feedback
+          a(target="_blank" href="https://workshop.voxbone.com") a Workshop project
           a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA
