--- a/views/login.jade
+++ b/views/login.jade
@@ -32,7 +32,7 @@ block content
                   div= message
 
             #alert-user-pass.alert.alert-danger.hidden Incorrect Email or Password, try again.
-            #alert-unverified.alert.alert-danger.hidden Unverified account. Please check your inbox.
+            #alert-unverified.alert.alert-danger.hidden Unverified account. Please check your inbox to validate your email address.
 
             #form_container
               .formWrap
