--- a/views/sip/new.jade
+++ b/views/sip/new.jade
@@ -36,7 +36,7 @@ block content
             .col-xs-6.col-xs-offset-3
               .sip-steps
                 .step.active
-                  span Add Sip
+                  span Add your SIP URI
                 .step.right
                   span Add WebRTC Call Button
 
