--- a/views/landing.html
+++ b/views/landing.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Voxbone | WebRTC Click-to-Call</title>
+    <title>Voxbone | Click-to-Call any SIP address</title>
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -37,9 +37,9 @@
       </div>
 
       <div class="call-to-action">
-        <span>HD calling straight from any website.</span>
+        <span>HD calling to any SIP address straight from any website.</span>
         <br>
-        <span class="block">No installs needed</span>
+        <span class="block">No web development needed</span>
         <br>
         <a class="btn btn-default btn-purple" href="/account/signup">Create Account</a>
       </div>
@@ -52,7 +52,7 @@
           <div class="col-xs-12 col-sm-10 col-xs-offset-1">
             <p>Welcome to Voxbone’s cloud-based click-to-call service. Create a click-to-call button that connects any webpage to any of your SIP addresses in seconds.</p>
             <p>No app or plug-in installs for your customers. No complex gateway installs or phone system configuration for you.</p>
-            <p>Need to pass information from the webpage to your PBX or navigate an IVR - we have you covered.</p>
+            <p>Need to pass information from the webpage to your PBX or navigate an IVR?  Click2Vox has you covered.</p>
             <div class="row">
               <div class="col-xs-12 col-sm-4">
                 <div class="screen-shot-holder">
@@ -101,7 +101,7 @@
               <a href="/widget/demo" class="btn btn-info">Create a sample call button</a>
             </div>
             <hr>
-            <div id="voxButton_575b3d7e89005411004db935" data-button_id="575b3d7e89005411004db935" data-text="click2vox Us" data-redirect_url="https://voxbone.com" data-did="883510080408" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-use_default_button_css="false"
+            <div id="voxButton_575b3d7e89005411004db935" data-button_id="575b3d7e89005411004db935" data-text="click2vox Us Now" data-redirect_url="https://voxbone.com" data-did="883510080408" data-dial_pad="true" data-context="" data-send_digits="" data-caller_id="Click2Vox" data-incompatible_browser_configuration="" data-show_frame="false" data-use_default_button_css="false"
             data-div_css_class_name=""
             data-button_css_class_name="btn btn-purple"
             class="voxButton">
