--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -67,11 +67,27 @@ block content
                 .boxPanel
                   .form-group
                     label.control-label SIP URI
-                      span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Enter any valid SIP URI or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
-                    select.form-control(ng-model="widget.sip_uri" ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIs())}" required)
+                      span.badge(data-toggle='tooltip' data-placement="right" title="This is the SIP address where inbound traffic from your Click2Vox button will be directed. Select one of yours SIP URIs or use one of our diagnostic URIs – echo@ivrs or digits@ivrs") ?
+
+                    select.form-control(
+                      ng-model="widget.sip_uri" name="sip_uri" required
+                      ng-options="sip for sip in #{JSON.stringify(currentUser.getSipURIs().concat('Add a new SIP URI'))}")
                       option(value="") Select a SIP URI
-                    .error-label(ng-cloak ng-show="widget_form.sip_uri.$touched" )
-                      div(ng-show="widget_form.sip_uri.$error.required") SIP URI is required
+
+                    .error-label(ng-cloak ng-show="widget_form.sip_uri.$touched")
+                      div(ng-show="widget_form.sip_uri.$error.required") SIP URI required
+
+                  .form-group(ng-cloak ng-show="widget.sip_uri == 'Add a new SIP URI'")
+                    if currentUser.sip_uris.length == 0 || currentUser.paid && false
+                      label.control-label Enter a new SIP URI
+                      input.form-control(type="text" name="new_sip_uri" ng-model="widget.new_sip_uri" ng-pattern="/^[^@]+@[^@]+$/" placeholder="i.e. echo@ivrs" check-allowed-sip)
+
+                      .error-label
+                        div(ng-show="widget_form.new_sip_uri.$error.notallowed") SIP URI not allowed
+                        div(ng-show="widget_form.new_sip_uri.$error.required") SIP URI is required
+                        div(ng-show="widget_form.new_sip_uri.$error.pattern") SIP URI must be valid i.e: user@ivrs.voxbone.com
+                    else
+                      include ../account/coming-soon-modal
 
                   .panel.panel-default
                     .panel-heading
@@ -163,8 +179,8 @@ block content
                         {{ widget.widget_code }}
                     .codebox-actions(ng-show='widget.showWidgetCode')
                       a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
-                      a(href="#" class="" id="generate-output-code" ng-click='saveConfiguration("div")') DIV
-                      a(href="#" class="" id="generate-output-code" ng-click='saveConfiguration("iframe")') IFRAME
+                      a(href="#" ng-click='saveConfiguration("div")') DIV
+                      a(href="#" ng-click='saveConfiguration("iframe")') IFRAME
 
               div(ng-cloak)
                 .error-label(ng-show="widget_form.cannotValidateSipUri")
@@ -174,6 +190,6 @@ block content
                   div Your configuration has been saved successfully!
 
                 .pull-right
-                  button.btn.btn-default(ng-cloak ng-click='saveConfiguration()' ng-disabled="widget_form.$invalid || savingConfig" ) {{submitText}}
+                  button.btn.btn-default(ng-cloak ng-click='saveConfiguration()' ng-disabled="widget_form.$invalid || savingConfig || widget_form.$pristine || sipDirty") {{submitText}}
                 .clearfix
                 br
