Some minor text edits from our marketing group (#263)
* text updates

* Update layout.jade

* minor text updates

from our marketing group

--- a/views/landing.html
+++ b/views/landing.html
@@ -46,7 +46,7 @@
       </div>
 
       <div class="call-to-action">
-        <span>HD calling to any SIP address straight from any website.</span>
+        <span>HD calling to any SIP address straight from any website</span>
         <br>
         <span class="block">No web development needed</span>
         <br>
@@ -59,7 +59,7 @@
       <div class="container">
         <div class="row">
           <div class="col-xs-12 col-sm-10 col-xs-offset-1">
-            <p>Welcome to Voxbone’s cloud-based click-to-call service. Create a click-to-call button that connects any webpage to any of your SIP addresses in seconds.</p>
+            <p>Click2Vox helps you build a click-to-call button that connects any webpage to any of your SIP addresses in seconds.</p>
             <p>No app or plug-in installs for your customers. No complex gateway installs or phone system configuration for you.</p>
             <p>Need to pass information from the webpage to your PBX or navigate an IVR?  Click2Vox has you covered.</p>
             <div class="row">
