--- a/views/signup.jade
+++ b/views/signup.jade
@@ -40,7 +40,7 @@ block content
 
             #form_container
               p.
-                #[b Note:] the Voxbone WebRTC Free Trial will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please see #[a(href="https://developers.voxbone.com/docs/webrtc/") view instructions]
+                #[b Note for current Voxbone customers:] your click2vox.com login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
 
               .formWrap
                 form#create_account(ng-controller="SignUpController" name="create_account" ng-init="account.uemail='#{email|| ''}'" novalidate)
