--- a/views/layout.jade
+++ b/views/layout.jade
@@ -74,6 +74,6 @@ html(lang='en')
           a(target="_blank" href="https://www.voxbone.com/resources/Voxbone_AUP.pdf") Acceptable Use Policy
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
           a(target="_blank" href="https://docs.google.com/document/d/1rj5O9hJnjlUAe64HeeNo-ZktNRFefseEc8QAF0-z44Y/edit?usp=sharing") Known Issues
-          a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send feedback
-          a(target="_blank" href="https://workshop.voxbone.com") a Workshop project
+          a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback
+          a(target="_blank" href="https://workshop.voxbone.com") A Workshop Project
           a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA
