[#181] Create known issues page (#264)

--- a/public/stylesheets/less/custom.less
+++ b/public/stylesheets/less/custom.less
@@ -99,3 +99,13 @@ pre {
   cursor: default;
   color: gray;
 }
+
+.gist {
+  .gist-meta {
+    display: none;
+  }
+
+  .markdown-body{
+    padding: 20px !important;
+  }
+}
