--- a/views/layout.jade
+++ b/views/layout.jade
@@ -73,7 +73,7 @@ html(lang='en')
         .col-xs-12.text-center#bottom-footer
           a(target="_blank" href="https://www.voxbone.com/resources/Voxbone_AUP.pdf") Acceptable Use Policy
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
-          a(target="_blank" href="/known-issues") Known Issues
+          a(href="/known-issues") Known Issues
           a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback
           a(target="_blank" href="https://workshop.voxbone.com") A Workshop Project
           a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA
