--- a/views/landing.html
+++ b/views/landing.html
@@ -115,7 +115,7 @@
             data-button_css_class_name="btn btn-purple"
             class="voxButton">
             </div>
-            <script src="https://click2vox-com-staging.herokuapp.com/click2vox.js"></script>
+            <script src="/click2vox.js"></script>
           </div>
         </div>
       </div>
