--- a/views/widget/new.jade
+++ b/views/widget/new.jade
@@ -39,7 +39,7 @@ block content
         .row
           .col-xs-12
             h1 Create a WebRTC Click-to-Call Button
-            p #[b Questions?] #[a(href="https://docs.google.com/document/d/1L6swwK_rVu_2XqSNMzmMRxBxL3YL50YTzkF6NaqeLqU/edit?usp=sharing" target="_blank") See our Frequently Asked Questions document.]
+            p #[b Questions?] #[a(href="https://click2vox.com/faq" target="_blank") See our Frequently Asked Questions document.]
 
             #alert-success.alert.alert-success(style="display: none;")
 
