--- a/public/stylesheets/less/registerPage.less
+++ b/public/stylesheets/less/registerPage.less
@@ -11,7 +11,7 @@
     display: inline-block;
     width: 520px;
     margin-top: 40px;
-    padding: 65px 90px; 
+    padding: 65px 90px;
     background: #fbfcfc;
     text-align: left;
     color: #54606b;
@@ -27,6 +27,9 @@
     }
     p{
       padding-top: 5px
+    }
+    .login-note{
+      padding-top: 15px
     }
   }
 }
