[MISC] Update signup.jade (#273)
specify click2vox.com account

--- a/views/signup.jade
+++ b/views/signup.jade
@@ -83,4 +83,4 @@ block content
 
                   button.btn.btn-default#create(ng-disabled="create_account.$invalid" ng-click="processForm()") Create Account
                   br
-                  p Already have an account? #[a(href="../login") Login here]
+                  p Already have a click2vox.com account? #[a(href="../login") Login here]
