--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -163,20 +163,21 @@ block content
                     span Widget Code Snippet
                       p Paste the following HTML code into your website or give it a try using on
 
-                      .btn-code-playground
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_jsfiddle(action="https://jsfiddle.net/api/post/library/pure/" method="POST" target="_blank")
-                            input(type="hidden" name="html" value='{{ prepareHtmlForCodepen(widget.widget_code) }}')
-                            a(href="#" onclick="$('#code_debug_jsfiddle').submit();") JSFiddle
-                        .btn-jsfiddle(ng-show="widget.showWidgetCode")
-                          form#code_debug_codepen(action="https://codepen.io/pen/define" method="POST" target="_blank")
-                            input(type="hidden" name="data" value='{"html": "{{ prepareHtmlForCodepen(widget.widget_code) }}"}')
-                            a(href="#" onclick="$('#code_debug_codepen').submit();") CodePen
-
                   .widget-code-wrap
                     .sample.shadow-z-2#widget_code
                       pre(ng-cloak)
                         {{ widget.widget_code }}
+
+                    .codebox-playground
+                      .btn-jsfiddle(ng-show="widget.showWidgetCode")
+                        form#code_debug_jsfiddle(action="https://jsfiddle.net/api/post/library/pure/" method="POST" target="_blank")
+                          input(type="hidden" name="html" value='{{ prepareHtmlForCodepen(widget.widget_code) }}')
+                          a(href="#" onclick="$('#code_debug_jsfiddle').submit();") JSFiddle
+                      .btn-jsfiddle(ng-show="widget.showWidgetCode")
+                        form#code_debug_codepen(action="https://codepen.io/pen/define" method="POST" target="_blank")
+                          input(type="hidden" name="data" value='{"html": "{{ prepareHtmlForCodepen(widget.widget_code) }}"}')
+                          a(href="#" onclick="$('#code_debug_codepen').submit();") CodePen
+
                     .codebox-actions(ng-show='widget.showWidgetCode')
                       a(id="clipboard_copy" href="#" data-clipboard-target="#widget_code") Copy to Clipboard
                       a(href="#" ng-click='saveConfiguration("div")') DIV
