[#243] moving the js test buttons (#277)
* [#243] moving the js test buttons

* [#243] moving the js test buttons

--- a/public/stylesheets/less/createButton.less
+++ b/public/stylesheets/less/createButton.less
@@ -196,7 +196,7 @@
       }
       .widget-code-wrap{
         position: relative;
-        padding: 10px 10px 30px;
+        padding: 30px 10px 0px;
         .rounded(6px);
         border: 1px solid @border-grey;
 
@@ -231,8 +231,8 @@
         // some overrides now
         .codebox-playground {
           position: absolute;
-          bottom: 0;
-          left: 0px;
+          top: 0;
+          right: 0px;
           height: 22px;
           padding: 0 5px;
           background: @border-grey;
