--- a/views/layout.jade
+++ b/views/layout.jade
@@ -54,7 +54,7 @@ html(lang='en')
       nav.navbar
         .navbar-header
           a.navbar-brand(href='https://voxbone.com' target="_blank")
-          span.subBrand Click2Vox Click-to-Call Gateway
+          span.subBrand Click2Vox
         .pull-right
           if authenticated
             a.login.pull-left.user-pill(href="/") Home
@@ -75,6 +75,6 @@ html(lang='en')
           a(target="_blank" href="https://www.voxbone.com/privacypolicy.jsf") Privacy Policy
           a(href="/known-issues") Known Issues
           a(href="/faq") FAQ
-          a(target="_blank" href="mailto:cwhart@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback
+          a(target="_blank" href="mailto:workshop@voxbone.com?subject=Voxbone Widget Generator Feedback") Send Feedback
           a(target="_blank" href="https://workshop.voxbone.com") A Workshop Project
           a(target="_blank" href="https://www.voxbone.com/" style="border-right: 0px;") Copyright ©2016, VOXBONE SA
