--- a/views/signup.jade
+++ b/views/signup.jade
@@ -40,7 +40,7 @@ block content
 
             #form_container
               p.
-                #[b Note for current Voxbone customers:] your click2vox.com login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
+                #[b Note for current Voxbone customers:] your Click2Vox login will not be linked to your existing Voxbone account. To use your Voxbone account and an existing DID, please visit #[a(href="https://developers.voxbone.com/how-to/setup-webrtc/") view instructions]
 
               .formWrap
                 form#create_account(ng-controller="SignUpController" name="create_account" ng-init="account.uemail='#{email || ''}'" novalidate)
@@ -84,4 +84,4 @@ block content
 
                   button.btn.btn-default#create(ng-disabled="create_account.$invalid" ng-click="processForm()") Create Account
                   br
-                  p Already have a click2vox.com account? #[a(href="../login") Login here]
+                  p Already have a Click2Vox account? #[a(href="../login") Login here]
