[#243] Adding missing wording

--- a/views/widget/edit.jade
+++ b/views/widget/edit.jade
@@ -164,9 +164,9 @@ block content
                       p Paste the following HTML code into your website or give it a try using on
                   ul.nav.nav-tabs
                     li(ng-click="saveConfiguration('div')" ng-class="{active:true}")
-                      a(data-toggle="tab" href="#") DIV #[span.badge(data-toggle='tooltip' data-placement="right" data-html="true" data-width="350" title="TBD") ?]
+                      a(data-toggle="tab" href="#") DIV #[span.badge(data-toggle='tooltip' data-placement="right" data-html="true" data-width="350" title="This option gives the most flexibility for customization and generally works best") ?]
                     li(ng-click="saveConfiguration('iframe')" ng-class="{active:false}")
-                      a(data-toggle="tab" href="#") IFRAME #[span.badge(data-toggle='tooltip' data-placement="right" data-html="true" data-width="350" title="TBD") ?]
+                      a(data-toggle="tab" href="#") IFRAME #[span.badge(data-toggle='tooltip' data-placement="right" data-html="true" data-width="350" title="Use this option if the widget is not displaying correctly") ?]
 
                   .widget-code-wrap
                     .sample.shadow-z-2#widget_code
